examples/test/testpolicy14042.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14042
  namespace: namespace343
spec:
  podSelector:
    matchLabels:
      key28: value17
      key43: value4
      key9: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value11
          key30: value39
          key48: value14
